--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -56,10 +56,10 @@
                         </svg> Ofertas
                     </a>
                     <ul class="collapse list-unstyled" id="offer-submenu">
-                        <li class="bg-secondary">
+                        <li class="bg-secondary-50">
                             <a routerLink="../ofertas">Ofertas</a>
                         </li>
-                        <li class="bg-secondary">
+                        <li class="bg-secondary-50">
                             <a routerLink="../interview">Mis ofertas</a>
                         </li>
                     </ul>
