--- a/src/styles-dark.scss
+++ b/src/styles-dark.scss
@@ -4,7 +4,7 @@ $secondary-dark-50: #853446;
 $success-dark: #29c7ac;
 $info-dark: #0f3460;
 $warning-dark: #c02739;
-$danger-dark: red;
+$danger-dark: #c02739;
 $light-dark: #16213e;
 $dark: #213742;
 app-root #themeChanger.dark {
