--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,3 +50,10 @@ body {
     width: fit-content;
     margin: auto;
 }
+
+.fa {
+    display: inline-block;
+    border-radius: 60px;
+    box-shadow: 0px 0px 2px #888;
+    padding: 0.5em 0.6em;
+}
