--- a/src/app/pages/alumno/perfil/perfil-al.component.html
+++ b/src/app/pages/alumno/perfil/perfil-al.component.html
@@ -87,7 +87,7 @@
         </div>
         <div class="form-group col-md-6">
             <label>Familia:</label>
-            <select formControlName="area" class="form-control" [class]="isValidField('area')"
+            <!--<select formControlName="area" class="form-control" [class]="isValidField('area')"
                 aria-label="Seleccione su modulo">
                 <option *ngFor="let area of parent" value="{{area.id}}">{{area.description}}</option>
             </select>
@@ -95,7 +95,9 @@
                 <span *ngIf="contactForm.get('area').errors?.required">
                     Debe elegir una opción
                 </span>
-            </div>
+            </div>-->
+            <button (click)="selectAreas()" type="btn" class="btn btn-primary">Abrir</button>
+
         </div>
     </div>
     <div class="form-group">
