--- a/src/app/pages/alumno/perfil/perfil-al.component.html
+++ b/src/app/pages/alumno/perfil/perfil-al.component.html
@@ -73,7 +73,7 @@
         <div class="form-group col-md-6">
             <label>Telefono móvil:</label>
             <input type="text" formControlName="phone" class="form-control" [class]="isValidField('phone')"
-                aria-label="Introduzca su teléfono móvil">
+            aria-label="Introduzca su teléfono móvil">
             <div class="invalid-feedback">
                 <span *ngIf="contactForm.get('phone').errors?.required">
                     Debe introducir un número de móvil
@@ -85,10 +85,24 @@
                 </span>
             </div>
         </div>        
+        <div class="form-group col-md-6">
+            <label>Estatus:</label>
+            <select formControlName="status" class="form-control" aria-label="Seleccione su estado laboral">
+                <option value="0">Parado</option>
+                <option value="1">Trabajando</option>
+                <option value="2">Trabajando, busco ofertas</option>
+            </select>
+            <div class="invalid-feedback">
+                <span *ngIf="contactForm.get('status').errors?.required">
+                    Debe elegir una opción
+                </span>
+            </div>
+        </div>
     </div>
     <div class="form-group col-md-6 pl-0">
         <label>Ciclos:</label>
-        <button (click)="selectAreas()" class="btn btn-secondary ml-3 mb-1 p-1">Seleccionar</button>                   
+        <button (click)="selectAreas()" class="btn btn-secondary ml-3 mb-1 p-1">Seleccionar</button>
+        <!---->            
     </div>
     <div class="form-group mt-2">
         <label>Aptitudes:</label>
