--- a/src/app/pages/alumno/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/alumno/student-dashboard/student-dashboard.component.html
@@ -14,7 +14,7 @@
                     <div class="card border-info mx-sm-1 p-3 m-2">
                         <div class="rounded-circle shadow text-info p-3 mx-auto">
                             <svg class="bi" width="32" height="32">
-                            <use xlink:href="bootstrap-icons.svg#person" />
+                            <use xlink:href="bootstrap-icons.svg#newspaper" />
                                 </svg>
                         </div>
                         <div class="text-info text-center mt-3">
@@ -29,7 +29,7 @@
                     <div class="card border-success mx-sm-1 p-3  m-2">
                         <div class="rounded-circle shadow text-warning p-3 mx-auto">
                             <svg class="bi" width="32" height="32">
-                            <use xlink:href="bootstrap-icons.svg#person" />
+                            <use xlink:href="bootstrap-icons.svg#inboxes-fill" />
                                 </svg>
                         </div>
                         <div class="text-warning text-center mt-3">
@@ -44,7 +44,7 @@
                     <div class="card border-danger mx-sm-1 p-3  m-2">
                         <div class="rounded-circle shadow text-secondary p-3 mx-auto">
                             <svg class="bi" width="32" height="32">
-                            <use xlink:href="bootstrap-icons.svg#person" />
+                            <use xlink:href="bootstrap-icons.svg#patch-question" />
                                 </svg>
                         </div>
                         <div class="text-secondary text-center mt-3">
@@ -59,7 +59,7 @@
                     <div class="card border-warning mx-sm-1 p-3  m-2">
                         <div class="rounded-circle shadow text-primary p-3 mx-auto">
                             <svg class="bi" width="32" height="32">
-                            <use xlink:href="bootstrap-icons.svg#person" />
+                            <use xlink:href="bootstrap-icons.svg#journal-check" />
                                 </svg>
                         </div>
                         <div class=" text-primary text-center mt-3">
