--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -4,7 +4,7 @@
     </div>
     <div *ngIf="areas?.length>0" class=" pt-4 pb-3">
         <div class="row justify-content-center">
-            <div class="col-6">
+            <div class="col-lg-8 col-md-10 col-sm-12">
                 <div class="card ">
                     <!--TITULO FORMULARIO-->
                     <div class="card-header bg-secondary text-center">
