--- a/src/styles-light.scss
+++ b/src/styles-light.scss
@@ -1,6 +1,6 @@
 $primary: #003f5a;
 $secondary: #007a7a;
-$secondary-50:#02a0a0;
+$secondary-50:#619999;
 $success: #28a745;
 $info: #de6600;
 $warning: #ffc107;
@@ -8,7 +8,6 @@ $danger: #dc3545;
 $light: #ebd9c8;
 $dark: black;
 $link-color: blue;
-
 .card-footer {
     overflow: hidden;
 }
