--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,9 +51,38 @@ body {
     margin: auto;
 }
 
+.dashboardCard {
+    min-height: 250px;
+    min-width: 295px;
+}
+
+.dashboardElement {
+    border: 9px outset rgba(28, 110, 164, 0.79);
+    -webkit-box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.39);
+    box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.39);
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+}
+
 .fa {
     display: inline-block;
     border-radius: 60px;
     box-shadow: 0px 0px 2px #888;
     padding: 0.5em 0.6em;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
