--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,12 +8,23 @@
 /* Importing Bootstrap SCSS file. */
 
 @import "../node_modules/bootstrap/scss/bootstrap";
-a {
-    &.badge:hover {
-        cursor: pointer;
-    }
+html,
+body {
+    height: 100%;
+    background-color: $light !important;
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+//CLASES
 .btn-primary {
     color: white;
     font-weight: bold;
@@ -24,10 +35,6 @@ a {
     min-height: calc(100vh - (145px));
     min-width: 100%;
     margin: 0 auto;
-}
-
-body {
-    background-color: $light !important;
 }
 
 .text {
@@ -62,27 +69,9 @@ body {
     box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.39);
 }
 
-a:hover {
-    text-decoration: none;
-}
-
-a {
-    text-decoration: none;
-}
-
 .fa {
     display: inline-block;
     border-radius: 60px;
     box-shadow: 0px 0px 2px #888;
     padding: 0.5em 0.6em;
-}
-
-html,
-body {
-    height: 100%;
-}
-
-body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
