--- a/src/app/pages/alumno/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/alumno/student-dashboard/student-dashboard.component.html
@@ -1,75 +1,81 @@
-<div class="d-flex bg-light-dark text" id="wrapper">
+<div class="d-flex bg-light-dark  " id="wrapper">
 
     <!-- Sidebar -->
     <app-sidebar></app-sidebar>
 
     <!-- Page Content -->
-    <div id="page-content-wrapper">
-
+    <div id="page-content-wrapper ">
         <div class="container-fluid my-5">
-
-            <div class="row w-100">
-
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="card border-info mx-sm-1 p-3 m-2">
-                        <div class="rounded-circle shadow text-info p-3 mx-auto">
-                            <svg class="bi" width="32" height="32">
+            <div class="row">
+                <a href="">
+                    <div class="col-sm-6 col-md-6 col-lg-3">
+                        <div class="card border-info dashboardElement mx-sm-1 p-2 m-1 dashboardCard">
+                            <div class="rounded-circle shadow text-info p-3 mx-auto">
+                                <svg class="bi" width="32" height="32">
                             <use xlink:href="bootstrap-icons.svg#newspaper" />
                                 </svg>
-                        </div>
-                        <div class="text-info text-center mt-3">
-                            <h4>Nuevas Ofertas</h4>
-                        </div>
-                        <div class="text-info text-center mt-2">
-                            <h1>0</h1>
+                            </div>
+                            <div class="text-info text-center mt-3">
+                                <h4>Nuevas Ofertas</h4>
+                            </div>
+                            <div class="text-info text-center mt-2">
+                                <h1>0</h1>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="card border-success mx-sm-1 p-3  m-2">
-                        <div class="rounded-circle shadow text-warning p-3 mx-auto">
-                            <svg class="bi" width="32" height="32">
+                </a>
+                <a href="">
+                    <div class="col-sm-6 col-md-6 col-lg-3">
+                        <div class="card border-success dashboardElement mx-sm-1 p-2 m-1 dashboardCard">
+                            <div class="rounded-circle shadow text-info p-3 mx-auto">
+                                <svg class="bi" width="32" height="32">
                             <use xlink:href="bootstrap-icons.svg#inboxes-fill" />
                                 </svg>
-                        </div>
-                        <div class="text-warning text-center mt-3">
-                            <h4>Solicitudes</h4>
-                        </div>
-                        <div class="text-warning text-center mt-2">
-                            <h1>0</h1>
+                            </div>
+                            <div class="text-warning text-center mt-3">
+                                <h4>Solicitudes</h4>
+                            </div>
+                            <div class="text-warning text-center mt-2">
+                                <h1>0</h1>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="card border-danger mx-sm-1 p-3  m-2">
-                        <div class="rounded-circle shadow text-secondary p-3 mx-auto">
-                            <svg class="bi" width="32" height="32">
+                </a>
+                <a href="">
+                    <div class="col-sm-6 col-md-6 col-lg-3">
+                        <div class="card border-danger dashboardElement mx-sm-1 p-2 m-1 dashboardCard">
+                            <div class="rounded-circle shadow text-info p-3 mx-auto">
+                                <svg class="bi" width="32" height="32">
                             <use xlink:href="bootstrap-icons.svg#patch-question" />
                                 </svg>
-                        </div>
-                        <div class="text-secondary text-center mt-3">
-                            <h4>Ofertas Sin respuesta</h4>
-                        </div>
-                        <div class="text-secondary text-center mt-2">
-                            <h1>0</h1>
+                            </div>
+                            <div class="text-secondary text-center mt-3">
+                                <h4>Ofertas Sin respuesta</h4>
+                            </div>
+                            <div class="text-secondary text-center mt-2">
+                                <h1>0</h1>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                    <div class="card border-warning mx-sm-1 p-3  m-2">
-                        <div class="rounded-circle shadow text-primary p-3 mx-auto">
-                            <svg class="bi" width="32" height="32">
+                </a>
+                <a href="">
+                    <div class="col-sm-6 col-md-6 col-lg-3">
+                        <div class="card border-warning dashboardElement mx-sm-1 p-2 m-1 dashboardCard">
+                            <div class="rounded-circle shadow text-info p-3 mx-auto">
+                                <svg class="bi" width="32" height="32">
                             <use xlink:href="bootstrap-icons.svg#journal-check" />
                                 </svg>
-                        </div>
-                        <div class=" text-primary text-center mt-3">
-                            <h4>Aceptado</h4>
-                        </div>
-                        <div class=" text-primary text-center mt-2">
-                            <h1>0</h1>
+                            </div>
+                            <div class=" text-primary text-center mt-3">
+                                <h4>Aceptado</h4>
+                            </div>
+                            <div class=" text-primary text-center mt-2">
+                                <h1>0</h1>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
+</div>
