--- a/src/app/pages/company/company-offer/company-offer.component.html
+++ b/src/app/pages/company/company-offer/company-offer.component.html
@@ -4,7 +4,7 @@
     <app-sidebar></app-sidebar>
 
     <!-- Contenido de la pagina -->
-    <div id="page-content-wrapper">        
+    <div id="page-content-wrapper">
 
         <div class="container-fluid my-5">
             <div class="row">
@@ -16,8 +16,7 @@
                                 <h2 class="card-title text-white font-weight-bold my-2 mr-3">Mis ofertas</h2>
                                 <div class="custom-control custom-switch" (change)="activeOffer()">
                                     <input type="checkbox" class="custom-control-input" id="activeOffer" checked>
-                                    <label class="custom-control-label" for="activeOffer"
-                                        id="labelActiveOffer">Activas</label>
+                                    <label class="custom-control-label" for="activeOffer" id="labelActiveOffer">Activas</label>
                                 </div>
                             </div>
                             <a class="rounded-circle position-absolute border border-white bg-secondary" (click)=offerNew()>
@@ -31,7 +30,8 @@
                             <div class="row">
                                 <!-- Se muestra para las ofertas activas -->
                                 <ng-container *ngIf="active">
-                                    <div class="col-sm-6" *ngFor="let offer of actOffers; index as i">
+
+                                    <div class="col-sm-6" *ngFor="let offer of actOffers | slice: (page-1) * pageSize : page * pageSize">
                                         <div class="card m-2 mb-4 border-secondary shadow">
                                             <div class="card-header bg-secondary text-white">
                                                 <h3 class="card-title font-weight-bolder border-bottom">{{ offer.name }}
@@ -94,7 +94,7 @@
                                 </ng-container>
                                 <!-- Se muestra para las offertas -->
                                 <ng-container *ngIf="!active">
-                                    <div class="col-sm-6" *ngFor="let offer of desOffers; index as i">
+                                    <div class="col-sm-6" *ngFor="let offer of desOffers  | slice: (page-1) * pageSize : page * pageSize ">
                                         <div class="card m-2 mb-4 border-secondary shadow">
                                             <div class="card-header bg-secondary text-white">
                                                 <h3 class="card-title font-weight-bolder border-bottom">{{ offer.name }}
@@ -158,6 +158,14 @@
 
                             </div>
 
+                        </div>
+                        <div *ngIf="!active" class="card-footer ">
+                            <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="desOffers.length " [boundaryLinks]="true ">
+                            </ngb-pagination>
+                        </div>
+                        <div *ngIf="active" class="card-footer ">
+                            <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="actOffers.length " [boundaryLinks]="true ">
+                            </ngb-pagination>
                         </div>
                     </div>
                 </div>
