--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="container-fluid bg-primary">
+<footer class=" footer container-fluid bg-primary">
     <div class=" row text-white bold">
         <div class="mx-auto pt-3  ">
             © 2021
