--- a/src/styles-dark.scss
+++ b/src/styles-dark.scss
@@ -1,107 +1,132 @@
-$primary-dark: #1a1a2e;
-$secondary-dark: #84142d;
-$secondary-dark-50: #853446;
-$success-dark: #29c7ac;
-$info-dark: #0f3460;
-$warning-dark: #c02739;
-$danger-dark: #c02739;
-$light-dark: #16213e;
-$dark: #213742;
-app-root #themeChanger.dark {
-    //dario
-    .text {
-        color: white;
-        font-weight: bold;
-        font-size: 20px;
-    }
-    .text-card {
-        font-size: 16px;
-        color: black;
-    }
-    .text-primary {
-        color: $primary-dark;
-    }
-    .text-secondary {
-        color: $secondary-dark;
-    }
-    .text-success {
-        color: $success-dark;
-    }
-    .text-info {
-        color: $info-dark;
-    }
-    .text-warning {
-        color: $warning-dark;
-    }
-    .text-light {
-        color: $light-dark;
-    }
-    .text-dark {
-        color: $dark;
-    }
-    .btn.btn-primary {
-        border: 3px solid #fff;
-    }
-    .bg-secondary-50 {
-        background-color: $secondary-dark-50;
-    }
-    .btn {
-        transition: all ease 0.2s;
-    }
-    .btn:hover {
-        transform: scale(1.05);
-        box-shadow: 2px 2px 2px grey;
-    }
-    .btn.btn-aside.active {
-        background-color: $dark;
-    }
-    //yo
-    body {
-        background-color: $primary-dark !important;
-    }
-    .text-light {
-        color: white;
-        font-weight: bold;
-    }
-    .navbar {
-        box-shadow: 4px 4px 10px white;
-        opacity: 90%; //90%
-    }
-    .bg-light-dark {
-        background-color: $light-dark !important;
-    }
-    .bg-primary {
-        background-color: $primary-dark !important;
-    }
-    .bg-secondary {
-        background-color: $secondary-dark !important;
-    }
-    .bg-danger {
-        background-color: $danger-dark !important;
-    }
-    .bg-info {
-        background-color: $info-dark !important;
-    }
-    .btn-info {
-        background-color: $info-dark !important;
-    }
-    .bg-success {
-        background-color: $success-dark !important;
-    }
-    .btn.btn-danger {
-        background-color: $danger-dark !important;
-    }
-    .btn.btn-success {
-        background-color: $success-dark !important;
-    }
-    .btn.btn-primary {
-        background-color: $primary-dark !important;
-    }
-    .btn-secondary {
-        background-color: $secondary-dark !important;
-    }
-    .btn.btn-primary,
-    .btn.btn-secondary {
-        border: 3px solid #fff;
-    }
-}
+        $primary-50: yellow;
+        $primary-dark: #1a1a2e;
+        $secondary-dark: #84142d;
+        $secondary-dark-50: #853446;
+        $success-dark: #29c7ac;
+        $info-dark: #0f3460;
+        $warning-dark: #c02739;
+        $danger-dark: #c02739;
+        $light-dark: #16213e;
+        $dark: #213742;
+        app-root #themeChanger.dark {
+            .primary-50 {
+                background-color: $primary-50 !important;
+            }
+            #sidebar-wrapper {
+                background: rgba($color: ($primary-dark), $alpha: 0.5) !important;
+                .list-group {
+                    ul {
+                        li a {
+                            border-bottom: 1px solid $primary-dark;
+                            &:hover {
+                                background-color: rgba($color: ($primary-dark), $alpha: 0.5);
+                            }
+                        }
+                    }
+                }
+            }
+            .dashboardCard:hover {
+                color: rgba(255, 255, 255, 1) !important;
+                box-shadow: 0 4px 16px whitesmoke;
+                transition: all 0.2s ease;
+            }
+            .text {
+                color: white;
+                font-weight: bold;
+                font-size: 20px;
+            }
+            .text-card {
+                font-size: 16px;
+                color: black;
+            }
+            .text-primary {
+                color: $primary-dark;
+            }
+            .text-secondary {
+                color: $secondary-dark;
+            }
+            .text-success {
+                color: $success-dark;
+            }
+            .text-info {
+                color: $info-dark;
+            }
+            .text-warning {
+                color: $warning-dark;
+            }
+            .text-light {
+                color: $light-dark;
+            }
+            .text-dark {
+                color: $dark;
+            }
+            .btn.btn-primary {
+                border: 3px solid #fff;
+            }
+            .bg-secondary-50 {
+                background-color: $secondary-dark-50;
+            }
+            .btn {
+                transition: all ease 0.2s;
+            }
+            .btn:hover {
+                transform: scale(1.05);
+                box-shadow: 2px 2px 2px grey;
+            }
+            .btn.btn-aside.active {
+                background-color: $dark;
+            }
+            //yo
+            body {
+                background-color: $primary-dark !important;
+            }
+            .text-light {
+                color: white;
+                font-weight: bold;
+            }
+            .navbar {
+                box-shadow: 4px 4px 10px white;
+                opacity: 90%; //90%
+            }
+            .bg-light {
+                background-color: $light-dark !important;
+            }
+            .bg-light-dark {
+                background-color: $light-dark !important;
+            }
+            .bg-primary {
+                background-color: $primary-dark !important;
+            }
+            .bg-secondary {
+                background-color: $secondary-dark !important;
+            }
+            .bg-danger {
+                background-color: $danger-dark !important;
+            }
+            .bg-info {
+                background-color: $info-dark !important;
+            }
+            .btn-info {
+                background-color: $info-dark !important;
+            }
+            .bg-success {
+                background-color: $success-dark !important;
+            }
+            .btn.btn-danger {
+                background-color: $danger-dark !important;
+            }
+            .btn.btn-success {
+                background-color: $success-dark !important;
+            }
+            .btn.btn-primary {
+                background-color: $primary-dark !important;
+            }
+            .btn-secondary {
+                background-color: $secondary-dark !important;
+            }
+            .btn.btn-primary,
+            .btn.btn-secondary,
+            .btn.btn-danger {
+                border: 3px solid #fff;
+            }
+        }
