--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -1,7 +1,7 @@
 <div id="themeChanger" [ngClass]="{'dark': themeDark,'light': !themeDark}">
-    <app-navbar>
-    </app-navbar>
 
+
+    <app-navbar></app-navbar>
     <router-outlet></router-outlet>
 
     <app-footer></app-footer>
