--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -7,7 +7,7 @@
     -o-transition: margin .25s ease-out;
     transition: margin .25s ease-out;
     z-index: 99;
-    background: rgba($color: ($primary-50), $alpha: 0.5) !important;
+    background: rgba($color: ($primary), $alpha: 0.5) !important;
     #menu {
         height: 100%;
     }
